@@ -10,8 +10,8 @@ gtk_source_buffer_set_highlight_syntax
 gtk_source_buffer_get_highlight_syntax
 gtk_source_buffer_set_language
 gtk_source_buffer_get_language
-gtk_source_buffer_set_check_brackets
-gtk_source_buffer_get_check_brackets
+gtk_source_buffer_set_highlight_matching_brackets
+gtk_source_buffer_get_highlight_matching_brackets
 gtk_source_buffer_set_style_scheme
 gtk_source_buffer_get_style_scheme
 gtk_source_buffer_get_max_undo_levels
